--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang = "en">
 <head>
      <meta charset = "UTF-8">
-     <title> Cursos de Alura </title>
+     <title> Cursos de DevOps de Alura </title>
 </head>
 <body>
      <ul>
          <li> Vagrant </li>
          <li> Docker </li>
          <li> Ansible </li>
-         <li> Integración continua: Madurez y Productividad en el Desarrollo de Software </li>
+         <li> Integración continua </li>
+         <li> </li>
      </ul>
 </body>
 </html>
