--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <li> Docker </li>
          <li> Ansible </li>
          <li> Integración continua </li>
-         <li> </li>
+         <li> Kubernetes </li>
      </ul>
 </body>
 </html>
