--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
      <ul>
          <li> Vagrant </li>
          <li> Docker: Creando containers sin dolor de cabeza </li>
-         <li> Ansible </li>
-         <li> Integración continua </li>
+         <li> Ansible: Infraestructura como código </li>
+         <li> Integración continua: Madurez y Productividad en el desarrollo de software</li>
          <li> Kubernetes </li>
      </ul>
 </body>
