--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
      <ul>
-         <li> Vagrant </li>
+         <li> Vagrant: Gerenciando máquinas virtuales </li>
          <li> Docker: Creando containers sin dolor de cabeza </li>
-         <li> Ansible </li>
-         <li> Integración continua </li>
+         <li> Ansible: Creando containers sin dolor de cabeza </li>
+         <li> Integración continua: Madurez y productividad en el Desarrollo de Software </li>
          <li> Kubernetes </li>
      </ul>
 </body>
