Modificando el nombre del curso de Kubernetes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
      <ul>
          <li> Vagrant: Gerenciando máquinas virtuales </li>
          <li> Docker: Creando containers sin dolor de cabeza </li>
-         <li> Ansible: Creando containers sin dolor de cabeza </li>
+         <li> Ansible: </li>
          <li> Integración continua: Madurez y productividad en el Desarrollo de Software </li>
-         <li> Kubernetes </li>
+         <li> Kubernetes: Introducción a la orquestación de containers</li>
      </ul>
 </body>
 </html>
